Fixes the delete icon not appearing on certain resolutions.
Fixes #7539

Also fixes overlap of text on mobile devices by resorting to just icons on lower resolutions.

--- a/apps/files/css/mobile.scss
+++ b/apps/files/css/mobile.scss
@@ -12,7 +12,6 @@
 	min-width: initial !important;
 }
 
-/* hide size and date columns */
 table th#headerSize,
 table td.filesize,
 table th#headerDate,
@@ -52,6 +51,11 @@ table td.filename .nametext .innernametext {
 	max-width: calc(100% - 175px) !important;
 }
 
+/* show the delete icon in name column in lower resolutions */
+table th#headerName .selectedActions .delete-selected {
+	display: inline;
+}
+
 /* proper notification area for multi line messages */
 #notification-container {
 	display: flex;
@@ -74,4 +78,10 @@ table.dragshadow {
 	z-index: 1000;
 }
 
+}
+@media only screen and (max-width: 480px)  {
+	/* Only show icons */
+	table th .selectedActions a span:not(.icon) {
+		display: none;
+	}
 }
